--- a/test.html
+++ b/test.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Test – Generátor</title>
+  <!-- ✅ Opravená cesta k CSS -->
   <link rel="stylesheet" href="style.css" />
   <style>
     #progressBox {
@@ -96,7 +97,7 @@
       checkbox.name = "odp";
       checkbox.value = odp.povodnePismeno;
 
-      // klik na celý blok
+      // ✅ Klik na celý obdĺžnik
       div.addEventListener("click", () => {
         checkbox.checked = !checkbox.checked;
       });
@@ -124,10 +125,17 @@
       const checkbox = div.querySelector('input[name="odp"]');
       const pism = checkbox.value;
 
-      if (spravne.includes(pism) && oznacene.includes(pism)) div.classList.add("correct");
-      else if (spravne.includes(pism) && !oznacene.includes(pism)) div.classList.add("partial-correct");
-      else if (!spravne.includes(pism) && oznacene.includes(pism)) div.classList.add("incorrect");
-      else div.classList.remove("correct", "partial-correct", "incorrect");
+      div.classList.remove("correct", "partial-correct", "incorrect", "partial-incorrect");
+
+      if (spravne.includes(pism) && oznacene.includes(pism)) {
+        div.classList.add("correct");
+      } else if (spravne.includes(pism) && !oznacene.includes(pism)) {
+        div.classList.add("partial-correct");
+      } else if (!spravne.includes(pism) && oznacene.includes(pism)) {
+        div.classList.add("incorrect");
+      } else {
+        div.classList.add("partial-incorrect");
+      }
     });
 
     const vseSpravne = spravne.every(s => oznacene.includes(s));
@@ -151,16 +159,14 @@
   }
 
   function ukonciTest() {
-    // odstráni poslednú otázku
+    // ✅ odstráni poslednú otázku
     otazkaText.textContent = "";
     odpovedeDiv.innerHTML = "";
     progressBox.textContent = "";
     buttons.style.display = "none";
-
-    // skryje názov testu (Biológia / Chémia)
     nazov.style.display = "none";
 
-    // nový úvodný text do stredu
+    // ✅ text do stredu
     const finishText = document.createElement("div");
     finishText.id = "finishText";
     finishText.textContent = `🎉 Test z ${jeBio ? "Biológie" : "Chémie"} je dokončený!`;
@@ -168,16 +174,16 @@
 
     const percento = Math.round((body / otazky.length) * 100);
     const sprava = percento >= 70
-      ? "🎉 Skvelá práca! Si READY na prijímačky!"
-      : "👍 Dobrý výsledok! Ešte trochu potrénuj.";
+      ? "🎉 Skvelá práca!"
+      : "👍 Ešte trochu potrénuj.";
 
     vysledkyDiv.innerHTML = `
-    <div class="final-box">
-      <h2>${sprava}</h2>
-      <p>Získal si <strong>${body}</strong> z ${otazky.length} otázok (${percento}%).</p>
-    </div>
-    <div id="scrollPanel" class="scroll-panel"></div>
-  `;
+      <div class="final-box">
+        <h2>${sprava}</h2>
+        <p>Získal si <strong>${body}</strong> z ${otazky.length} otázok (${percento}%).</p>
+      </div>
+      <div id="scrollPanel" class="scroll-panel"></div>
+    `;
 
     const scrollPanel = document.getElementById("scrollPanel");
 
@@ -198,6 +204,7 @@
         if (spravne.includes(pism) && oznacene.includes(pism)) div.classList.add("correct");
         else if (spravne.includes(pism) && !oznacene.includes(pism)) div.classList.add("partial-correct");
         else if (!spravne.includes(pism) && oznacene.includes(pism)) div.classList.add("incorrect");
+        else div.classList.add("partial-incorrect");
 
         otDiv.appendChild(div);
       });
@@ -205,6 +212,7 @@
       scrollPanel.appendChild(otDiv);
     });
 
+    // ✅ nové tlačidlá s jednotným štýlom
     const btnRestart = document.createElement("button");
     btnRestart.textContent = "🔁 Opakuj test";
     btnRestart.className = "button-restart";
@@ -218,7 +226,6 @@
     vysledkyDiv.appendChild(btnRestart);
     vysledkyDiv.appendChild(btnDomov);
   }
-
 
   btnSkontroluj.addEventListener("click", () => skontroluj(false));
   btnDalsia.addEventListener("click", dalsia);
